<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spashbackg"
    tools:context=".activities.Login">
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/rl_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:padding="@dimen/_10sdp">
                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textSize="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:textColor="@color/background" />
                <android.widget.EditText
                    android:id="@+id/edt_user_name"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_16sdp"
                    android:fontFamily="@font/robotocondensedregular"
                    android:layout_below="@id/txt_sign_in"
                    android:layout_margin="@dimen/_16sdp"
                    android:hint="@string/emai_id"/>
                <RelativeLayout
                    android:id="@+id/rl_password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp">
                    <android.widget.EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_16sdp"
                        android:fontFamily="@font/robotocondensedregular"
                        android:hint="@string/password"/>
                    <ImageView
                        android:id="@+id/img_show_password"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:src="@drawable/hide_password"/>
                </RelativeLayout>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:background="@drawable/btnback"/>
                <TextView
                    android:id="@+id/txt_foprgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetPass"
                    android:textSize="@dimen/_16sdp"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorBlack" />
                <TextView
                    android:id="@+id/txt_teacherRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_as_teacher"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <ImageView
        android:src="@drawable/logo"
        android:id="@+id/img_logo"
        android:layout_marginBottom="@dimen/_340sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp" />
    <ProgressBar
        android:id="@+id/login_loader"
        style="@style/ProgressBarStyle"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp" />
</RelativeLayout>