<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:id="@+id/text"
    android:layout_width="wrap_content"
    android:text="@string/forgetPass"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/_25sdp"
    android:textAppearance="@style/HeadingBlackBold"
    android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10"
        android:padding="@dimen/_32sdp">
        <android.widget.EditText
            android:id="@+id/edt_user_name"
            android:background="@drawable/edt_back"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_16sdp"
            android:hint="Email ID"/>
        <EditText  android:singleLine="true"
            android:id="@+id/teachphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:layout_weight="5"
            android:padding="@dimen/_10sdp"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edt_back"
            android:textAppearance="@style/edt_style"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Send Code"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btnback"/>
    </LinearLayout>
<!--    change Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_marginTop="@dimen/_32sdp"
        android:visibility="gone"
        android:padding="@dimen/_16sdp">
        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@drawable/edt_back">
            <android.widget.EditText
                android:id="@+id/edt_password"
                android:background="@drawable/edt_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_16sdp"
                android:hint="@string/new_password"/>
            <ImageView
                android:id="@+id/img_show_password"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_15sdp"
                android:src="@drawable/hide_password"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_conf_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edt_back">
            <android.widget.EditText
                android:id="@+id/edt_conf_password"
                android:background="@drawable/edt_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_16sdp"
                android:hint="@string/confPassword"/>
            <ImageView
                android:id="@+id/img_show_conf_password"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_15sdp"
                android:src="@drawable/hide_password"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btnback"/>
    </LinearLayout>
</LinearLayout>