<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp">
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_4sdp"
                        android:text="name"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_20sdp" />
                    <TextView
                        android:text="*"
                        android:textColor="@color/main_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="10"
                    android:padding="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:padding="@dimen/_10sdp"
                        android:layout_weight="5"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        android:textAppearance="@style/edt_style"/>
                    <EditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/last_name"
                        android:padding="@dimen/_10sdp"
                        android:textAppearance="@style/edt_style"
                        android:layout_weight="5"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/standard"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_20sdp" />
                    <TextView
                        android:text="*"
                        android:textColor="@color/main_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">
                    <Spinner
                        android:id="@+id/edtstandYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/edt_margin" />
                    <EditText
                        android:id="@+id/edtSchoolName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/school_name"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textAppearance="@style/edt_style"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_4sdp"
                    android:text="Parent Details"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_20sdp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:padding="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/edtPname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fathers_name"
                        android:padding="@dimen/_10sdp"
                        android:layout_weight="5"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        
                        android:textAppearance="@style/edt_style"/>
                    <EditText
                        android:id="@+id/edtpLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/last_name"
                        android:padding="@dimen/_10sdp"
                        android:textAppearance="@style/edt_style"
                        android:layout_weight="5"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/phone_number"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_20sdp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="10"
                    android:padding="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/edtStdPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mobile Number*"
                        android:layout_weight="5"
                        android:padding="@dimen/_10sdp"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:digits="0123456789"
                        
                        android:textAppearance="@style/edt_style"/>
                    <EditText
                        android:id="@+id/edtParentPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="Mobile Number"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textAppearance="@style/edt_style"
                        android:layout_weight="5"
                        android:inputType="phone"
                        android:digits="0123456789"
                        android:maxLength="10"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_4sdp"
                        android:text="Date of birth"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_20sdp" />
                    <TextView
                        android:text="*"
                        android:textColor="@color/main_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:padding="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/edtStdDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dateofbirth"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:editable="false"
                        
                        android:textAppearance="@style/edt_style"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_4sdp"
                    android:text="Address"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_20sdp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="10"
                    android:padding="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:padding="@dimen/_10sdp"
                        android:textAppearance="@style/edt_style"/>
                    <EditText
                        android:id="@+id/edtcity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="City"
                        android:padding="@dimen/_10sdp"
                        android:textAppearance="@style/edt_style"/>
                    <EditText
                        android:id="@+id/edtstate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="State"
                        android:padding="@dimen/_10sdp"
                        android:textAppearance="@style/edt_style"/>
                    <EditText
                        android:id="@+id/edtZipCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Zip Code"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:textAppearance="@style/edt_style"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/btnback"
                android:text="@string/update"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:textColor="@color/white"
                android:textSize="25sp"/>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/loader"
        style="@style/progressBar"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/backArrow"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>